# exp-005-berty-vector-search

./: .gitignore  LICENSE  README.md  docker-compose.yml
gopher/: go.mod  go.sum  main.go
gopher/texts/: test.txt
rusty/: Cargo.toml  Dockerfile  Makefile
rusty/src/: compare.rs  cosine_similarity.cu  cosine_similarity.ptx  main.rs
rusty/texts/: test_t.text
snake/: main.py
snake/texts/: test_go.txt  test_rs.txt  test_ts.txt
typescripty/: index.ts  package.json
typescripty/texts/: test.txt  test_t.txt
