[package]
name = "rusty-berty-milvus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-bert = "0.20.0"
tokio = { version = "1.17.0", features = ["full"] }
redis = "0.23.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tch = "0.10.1"
