[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
redis = "0.23.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md5 = "0.7.0"
rustacuda = "0.1.3"
rust-bert = { version = "0.21.0", features = ["download-libtorch"] }
rustacuda_derive = "0.1.2"
rustacuda_core = "0.1.2"

